[project]
name = "agentes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "pypdf>=6.4.1",
    "transformers>=4.57.3",
    "torch>=2.7.0",
    "chromadb>=1.4.0",
    "sentence-transformers>=5.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langchain-community>=0.4.1",
    "pydantic>=2.12.5",
    "openai-agents>=0.7.0",
    "langchain-chroma>=1.1.0",
    "gradio>=6.5.0",
    "requests>=2.32.5",
    "ipykernel>=7.1.0",
    "sendgrid>=6.12.5",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    "joblib>=1.5.3",
    "websocket-client>=1.9.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "langchain-groq>=1.1.2",
    "flask-cors>=6.0.2",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }, 
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"   
explicit = true
